--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+div{
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  padding: 0px;
+  margin: 0px;
+  padding-top: 40px;
+  min-height: 100vh;
 }
